# sql_tools

./: .bazeliskrc  .gitignore  .gitpod.yml  BUILD.bazel  README.md  WORKSPACE  pylintrc  requirements-dev.txt  requirements.txt  run_pydocs.sh  run_viewer.sh
.github/workflows/: build.yml  pypi-publish.yml
dataschema/: BUILD.bazel  Schema.proto  Schema.py  alchemy_test.py  annotations.py  beam_test.py  compare_test.py  createsql2schema_test.py  data_writer.py  data_writer_test.py  dbml_test.py  entity.py  expectations_test.py  nesting_test_data.py  pandas_test.py  parquet2schema.py  parquet_test.py  proto2schema.py  pyspark2schema.py  pyspark_test.py  python2schema.py  schema2beam.py  schema2dbml.py  schema2expectations.py  schema2pandas.py  schema2parquet.py  schema2pyspark.py  schema2python.py  schema2python_test.py  schema2scala.py  schema2sql.py  schema2sqlalchemy.py  schema_example.proto  schema_example.py  schema_synth.py  schema_synth_example.py  schema_synth_generator.py  schema_synth_test.py  schema_test.proto  schema_test.py  (+7 more)
examples/: BUILD.bazel  dataschema_example.py  example.proto
package/: BUILD.bazel  MANIFEST.in  build_pip.sh  setup.py
sql_analyze/grammars/: BUILD.bazel  antlr_util_test.py  detect_endpoints.py  graphing.py  parse_sql.py  parse_sql_flags.py  parse_sql_lib.py  parse_sql_test.py  statement.py  tokens.py  trees.py
sql_analyze/grammars/ClickHouse/: BUILD.bazel  ClickHouseLexer.g4  ClickHouseLexer.py  ClickHouseParser.g4  ClickHouseParser.py  ClickHouseParserVisitor.py  README.md  create_table_schema.py  parse_sql_lib.py  statement_builder.py
sql_analyze/grammars/Hive/: BUILD.bazel  FromClauseParser.g4  HiveLexer.g4  HiveLexer.py  HiveParser.g4  HiveParser.py  HiveParserVisitor.py  IdentifiersParser.g4  README.md  SelectClauseParser.g4  mkcase.py  parse_sql_lib.py  statement_builder.py
sql_analyze/viewer/: BUILD.bazel  viewer.py
sql_analyze/viewer/examples/: exists_aggregate.sql  exists_having.sql  exists_join_set.sql  exists_within.sql  join_outer.sql  subquery_correlated.sql  subquery_correlated_scalar.sql
sql_analyze/viewer/web/: index.html  viewer.css
sql_analyze/viewer/web/js/: main.js
sql_analyze/viewer/web/js/ace/: README.md
sql_analyze/viewer/web/js/split/: README.md
sql_analyze/viewer/web/js/svg-pan-zoom/: README.md
sql_analyze/viewer/web/js/viz/: README.md  full.render.js  worker.js
