#
# nuna_sql_tools: Copyright 2022 Nuna Inc
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
package(default_visibility = ["//visibility:public"])

load("@nuna_sql_tools_pip_deps//:requirements.bzl", "requirement")
load("@bazel_pylint//:pyrules.bzl", "py_lint_binary")

py_lint_binary(
    name = "viewer",
    srcs = ["viewer.py"],
    data = glob(["web/**"]) + glob(["examples/**"]),
    rules = "//:pylintrc",
    srcs_version = "PY3",
    deps = [
        "//sql_analyze/grammars",
        "//sql_analyze/grammars:parse_sql_lib",
        "//sql_analyze/grammars/ClickHouse:parse_lib",
        "//sql_analyze/grammars/Hive:parse_lib",
        requirement("absl-py"),
    ],
)
